# edge-burn-benchmark

./: .gitignore  README.md  run_all.sh  setup.sh
models/: download_models.sh
paper/: Makefile  main.tex
results/: burn_1t.json  burn_4t.json  onnx_1t.json  onnx_4t.json  tflite_1t.json  tflite_4t.json
scripts/: benchmark_common.py  benchmark_onnx.py  benchmark_tflite.py  check_correctness.py  generate_figures.py
src/burn_bench/: Cargo.toml  build.rs
src/burn_bench/src/: main.rs
