[package]
name = "burn-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.13", default-features = false, features = ["ndarray", "std"] }
burn-ndarray = { version = "0.13", default-features = false }
burn-import = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[build-dependencies]
burn-import = "0.13"
