[package]
name = "burn-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.21", default-features = false, features = ["ndarray"] }
burn-ndarray = "0.21"
burn-store = { version = "0.21", features = ["std", "burnpack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[build-dependencies]
burn-onnx = "0.21"
